// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders Icons of different size correctly 1`] = `
<div>
  <i
    class="za-icon za-icon za-icon-broadcast za-icon--theme-primary za-icon--size-lg za-icon--theme-primary za-icon--size-lg"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#broadcast"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-broadcast za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#broadcast"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-broadcast za-icon--theme-primary za-icon--size-sm za-icon--theme-primary za-icon--size-sm"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#broadcast"
      />
    </svg>
  </i>
</div>
`;

exports[`Icon renders Icons of different theme correctly 1`] = `
<div>
  <i
    class="za-icon za-icon za-icon-right za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#right"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-add za-icon--theme-success za-icon--size-md za-icon--theme-success za-icon--size-md"
    prefixcls="za-icon"
    theme="success"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#add"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-info-round za-icon--theme-warning za-icon--size-md za-icon--theme-warning za-icon--size-md"
    prefixcls="za-icon"
    theme="warning"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#info-round"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-wrong-round-fill za-icon--theme-danger za-icon--size-md za-icon--theme-danger za-icon--size-md"
    prefixcls="za-icon"
    theme="danger"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#wrong-round-fill"
      />
    </svg>
  </i>
</div>
`;

exports[`Icon renders Icons using iconfont 1`] = `
<div>
  <i
    class="za-icon za-icon--theme-primary za-icon--size-lg"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#icon-empty_fill"
      />
    </svg>
  </i>
</div>
`;

exports[`Icon renders all Icons 1`] = `
<div>
  <i
    class="za-icon za-icon za-icon-add za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#add"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-arrow-left za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#arrow-left"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-arrow-bottom za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#arrow-bottom"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-arrow-right za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#arrow-right"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-broadcast za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#broadcast"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-date za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#date"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-deletekey za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#deletekey"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-info-round za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#info-round"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-info-round-fill za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#info-round-fill"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-keyboard za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#keyboard"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-minus za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#minus"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-question-round za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#question-round"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-required za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#required"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-right-round-fill za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#right-round-fill"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-right-round za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#right-round"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-right za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#right"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-search za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#search"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-time-circle za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#time-circle"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-warning-round-fill za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#warning-round-fill"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-wrong-round-fill za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#wrong-round-fill"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-wrong-round za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#wrong-round"
      />
    </svg>
  </i>
  <i
    class="za-icon za-icon za-icon-wrong za-icon--theme-primary za-icon--size-md za-icon--theme-primary za-icon--size-md"
    prefixcls="za-icon"
    theme="primary"
    type=""
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <use
        href="#wrong"
      />
    </svg>
  </i>
</div>
`;
